--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  {{template "navbar".}}
   <div class="flex justify-center items-center min-h-screen bg-gray-100">
     {{template "content".}}
   </div>
