--- a/ui/html/track/track.html
+++ b/ui/html/track/track.html
@@ -1,10 +1,12 @@
 {{define "content"}}
-<div class="bg-white border border-gray-300 rounded-lg shadow-lg w-[80vw]">
-  <div class="text-center m-4">
-    <h2 class="text-2xl font-bold">
-      Map
-    </h2>
+<div class="flex justify-center items-center min-h-screen bg-gray-100">
+  <div class="bg-white border border-gray-300 rounded-lg shadow-lg w-[80vw]">
+    <div class="text-center m-4">
+      <h2 class="text-2xl font-bold">
+        Map
+      </h2>
+    </div>
+    <div id="map" class="h-[70vh] bg-yellow-100"></div>
   </div>
-  <div id="map" class="h-[70vh] bg-yellow-100"></div>
 </div>
 {{end}}
