--- a/ui/html/user/login.html
+++ b/ui/html/user/login.html
@@ -1,32 +1,34 @@
 {{define "content"}}
-<!-- Login Form Box -->
-<div class="w-full max-w-md bg-white rounded-lg shadow-lg p-8">
-  <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Login</h2>
+<div class="flex justify-center items-center min-h-screen bg-gray-100">
+  <!-- Login Form Box -->
+  <div class="w-full max-w-md bg-white rounded-lg shadow-lg p-8">
+    <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Login</h2>
 
-  <form action="/user/login" method="POST" class="space-y-6" novalidate>
-    <!-- Username Field -->
-    <div>
-      <label for="username" class="block text-gray-600 font-semibold">Username</label>
-      <input type="text" id="username" name="username" required
-        class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
-        placeholder="Enter your username">
-    </div>
+    <form action="/user/login" method="POST" class="space-y-6" novalidate>
+      <!-- Username Field -->
+      <div>
+        <label for="username" class="block text-gray-600 font-semibold">Username</label>
+        <input type="text" id="username" name="username" required
+          class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
+          placeholder="Enter your username">
+      </div>
 
-    <!-- Password Field -->
-    <div>
-      <label for="password" class="block text-gray-600 font-semibold">Password</label>
-      <input type="password" id="password" name="password" required
-        class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
-        placeholder="Enter your password">
-    </div>
+      <!-- Password Field -->
+      <div>
+        <label for="password" class="block text-gray-600 font-semibold">Password</label>
+        <input type="password" id="password" name="password" required
+          class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
+          placeholder="Enter your password">
+      </div>
 
-    <!-- Submit Button -->
-    <div class="flex justify-center">
-      <button type="submit"
-        class="w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-2 rounded-md transition">
-        Login
-      </button>
-    </div>
-  </form>
+      <!-- Submit Button -->
+      <div class="flex justify-center">
+        <button type="submit"
+          class="w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-2 rounded-md transition">
+          Login
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
 {{end}}
