--- a/ui/html/user/login.html
+++ b/ui/html/user/login.html
@@ -7,18 +7,28 @@
     <form action="/user/login" method="POST" class="space-y-6" novalidate>
       <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
 
+      {{with .Form}}
+      <!-- Global Form Error Message -->
+      {{with .Errors}}
+      <div id="globalError" class="bg-red-100 text-red-700 border border-red-500 p-3 rounded-md mb-4 text-sm">
+        {{range .}}
+        <p>{{.}}</p>
+        {{end}}
+      </div>
+      {{end}}
+
       <!-- Username Field -->
       <div>
-        <label for="username" class="block text-gray-600 font-semibold">Username</label>
-        <input type="text" id="username" name="username" required
+        <label for="Username" class="block text-gray-600 font-semibold">Username</label>
+        <input type="text" id="Username" name="Username" required
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
           placeholder="Enter your username">
       </div>
 
       <!-- Password Field -->
       <div>
-        <label for="password" class="block text-gray-600 font-semibold">Password</label>
-        <input type="password" id="password" name="password" required
+        <label for="Password" class="block text-gray-600 font-semibold">Password</label>
+        <input type="password" id="Password" name="Password" required
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
           placeholder="Enter your password">
       </div>
@@ -30,6 +40,7 @@
           Login
         </button>
       </div>
+      {{end}}
     </form>
   </div>
 </div>
