flash & authorization middleware

--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -9,8 +9,9 @@
   <script type="text/javascript" src="/static/js/tracks.js"> </script>
 </head>
 
-<body>
+<body class="bg-gray-100">
   {{template "navbar".}}
+  {{template "flash".}}
   {{template "content".}}
 </body>
 
