--- a/ui/html/user/login.html
+++ b/ui/html/user/login.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<div class="flex justify-center items-center min-h-screen bg-gray-100">
+<div class="flex justify-center items-center py-20">
   <!-- Login Form Box -->
   <div class="w-full max-w-md bg-white rounded-lg shadow-lg p-8">
     <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Login</h2>
