--- a/ui/html/gpxfile/gpxfiles.html
+++ b/ui/html/gpxfile/gpxfiles.html
@@ -56,7 +56,7 @@
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                   Status</th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                  Link</th>
+                  User</th>
                 <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                   Created At</th>
                 <th scope="col" class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -69,7 +69,7 @@
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{.Filename}}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{.Filesize | bytes}}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{.Status}}</td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-blue-500">{{.Link}}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{.User.Username}}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{.CreatedAt | time}}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm font-medium flex justify-center space-x-4">
                   <form action="/gpxfile/{{.ID}}/delete" method="POST" class="confirm">
