--- a/ui/html/track/tracks.html
+++ b/ui/html/track/tracks.html
@@ -9,6 +9,8 @@
           <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
             Name </th>
           <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+            User </th>
+          <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
             Length </th>
           <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Created
             at </th>
@@ -22,6 +24,7 @@
           <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
             <a href="/track/{{.Track.ID}}" class="text-green-600 hover:text-green-900">{{.Track.Name}}</a>
           </td>
+          <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{.User.Username}}</td>
           <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{.TrackLengthMeters | distance}}</td>
           <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">{{.Track.CreatedAt | time}}</td>
         </tr>
