--- a/ui/html/collection/new.html
+++ b/ui/html/collection/new.html
@@ -3,16 +3,33 @@
   <div class="container mx-auto bg-white shadow-md rounded-lg p-8">
     <h2 class="text-2xl font-semibold text-gray-700 mb-6">Create Collection</h2>
 
-    <form action="/collection/create" method="POST" class="space-y-6" id="collectionForm">
+    <form action="/collection/new" method="POST" class="space-y-6" id="collectionForm">
       <input type="hidden" name="csrf_token" value="{{$.CSRFToken}}">
+
+      {{with .Form}}
+      <!-- Global Form Error Message -->
+      {{with .Errors}}
+      <div id="globalError" class="bg-red-100 text-red-700 border border-red-500 p-3 rounded-md mb-4 text-sm">
+        {{range .}}
+        <p>{{.}}</p>
+        {{end}}
+      </div>
+      {{end}}
 
       <!-- Collection Name -->
       <div>
         <label for="collection-name" class="block text-gray-600 font-medium">Collection Name</label>
         <input type="text" id="collection-name" name="name" required
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
-          placeholder="Enter collection name">
+          placeholder="Enter collection name" value="{{.Name}}">
+
+        {{with .FieldErrors.Name}}
+        {{range .}}
+        <p class="text-red-500 text-xs mt-2" id="usernameError">{{.}}</p>
+        {{end}}
+        {{end}}
       </div>
+      {{end}}
 
       <!-- Tracks -->
       <div id="tracksContainer">
