added form tags to forms missing them
avoid attempt on decoding non-existent fields / consistent naming of form fields

--- a/ui/html/user/edit.html
+++ b/ui/html/user/edit.html
@@ -18,8 +18,8 @@
 
       <!-- Username Field -->
       <div class="mb-4">
-        <label for="Username" class="block text-gray-700 text-sm font-medium mb-2">Username</label>
-        <input type="text" id="Username" name="Username"
+        <label for="username" class="block text-gray-700 text-sm font-medium mb-2">Username</label>
+        <input type="text" id="username" name="username"
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
           value="{{.Username}}">
         {{with .FieldErrors.Username}}
@@ -31,8 +31,8 @@
 
       <!-- Password Field -->
       <div class="mb-4">
-        <label for="Password" class="block text-gray-700 text-sm font-medium mb-2">Password</label>
-        <input type="password" id="Password" name="Password"
+        <label for="password" class="block text-gray-700 text-sm font-medium mb-2">Password</label>
+        <input type="password" id="password" name="password"
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
         {{with .FieldErrors.Password}}
         {{range .}}
@@ -43,8 +43,8 @@
 
       <!-- Confirm Password Field -->
       <div class="mb-6">
-        <label for="PasswordConfirm" class="block text-gray-700 text-sm font-medium mb-2">Confirm Password</label>
-        <input type="password" id="PasswordConfirm" name="PasswordConfirm"
+        <label for="password_confirm" class="block text-gray-700 text-sm font-medium mb-2">Confirm Password</label>
+        <input type="password" id="password_confirm" name="password_confirm"
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
         {{with .FieldErrors.PasswordConfirm}}
         {{range .}}
