--- a/ui/html/user/login.html
+++ b/ui/html/user/login.html
@@ -19,16 +19,16 @@
 
       <!-- Username Field -->
       <div>
-        <label for="Username" class="block text-gray-600 font-semibold">Username</label>
-        <input type="text" id="Username" name="Username" required
+        <label for="username" class="block text-gray-600 font-semibold">Username</label>
+        <input type="text" id="username" name="username" required
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
           placeholder="Enter your username">
       </div>
 
       <!-- Password Field -->
       <div>
-        <label for="Password" class="block text-gray-600 font-semibold">Password</label>
-        <input type="password" id="Password" name="Password" required
+        <label for="password" class="block text-gray-600 font-semibold">Password</label>
+        <input type="password" id="password" name="password" required
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-transparent"
           placeholder="Enter your password">
       </div>
