--- a/ui/html/user/new.html
+++ b/ui/html/user/new.html
@@ -19,8 +19,8 @@
 
       <!-- Username Field -->
       <div class="mb-4">
-        <label for="Username" class="block text-gray-700 text-sm font-medium mb-2">Username</label>
-        <input type="text" id="Username" name="Username" required
+        <label for="username" class="block text-gray-700 text-sm font-medium mb-2">Username</label>
+        <input type="text" id="username" name="username" required
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
           value="{{.Username}}">
         {{with .FieldErrors.Username}}
@@ -32,8 +32,8 @@
 
       <!-- Password Field -->
       <div class="mb-4">
-        <label for="Password" class="block text-gray-700 text-sm font-medium mb-2">Password</label>
-        <input type="password" id="Password" name="Password" required
+        <label for="password" class="block text-gray-700 text-sm font-medium mb-2">Password</label>
+        <input type="password" id="password" name="password" required
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
         {{with .FieldErrors.Password}}
         {{range .}}
@@ -44,8 +44,8 @@
 
       <!-- Confirm Password Field -->
       <div class="mb-6">
-        <label for="PasswordConfirm" class="block text-gray-700 text-sm font-medium mb-2">Confirm Password</label>
-        <input type="password" id="PasswordConfirm" name="PasswordConfirm" required
+        <label for="password_confirm" class="block text-gray-700 text-sm font-medium mb-2">Confirm Password</label>
+        <input type="password" id="password_confirm" name="password_confirm" required
           class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
         {{with .FieldErrors.PasswordConfirm}}
         {{range .}}
