favico and project logo

--- a/ui/html/base.html
+++ b/ui/html/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/css/tracks.css" rel="stylesheet">
     <link href="/static/css/ol.css" rel="stylesheet">
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="/static/js/tracks.js"> </script>
   </head>
 
