simplify some css

--- a/ui/html/collection/collection.html
+++ b/ui/html/collection/collection.html
@@ -1,6 +1,6 @@
 {{define "content"}}
 {{with .Collection}}
-<div class="flex justify-center bg-gray-100 p-6 min-h-screen">
+<div class="flex justify-center p-6 min-h-screen">
   <!-- Main Content Wrapper -->
   <div class="flex w-full max-w-6xl gap-8 mt-8">
     <!-- Map Section -->
