--- a/ui/html/collection/new.html
+++ b/ui/html/collection/new.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<div class="min-h-screen bg-gray-100 p-6">
+<div class="min-h-screen p-6">
   <div class="container mx-auto bg-white shadow-md rounded-lg p-8">
     <h2 class="text-2xl font-semibold text-gray-700 mb-6">Create Collection</h2>
 
