--- a/ui/html/gpxfile/gpxfiles.html
+++ b/ui/html/gpxfile/gpxfiles.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<div class="min-h-screen p-6 bg-gray-100">
+<div class="min-h-screen p-6">
   <div class="container mx-auto">
     <div class="flex flex-col lg:flex-row lg:space-x-8 gap-6">
 
