--- a/ui/html/track/track.html
+++ b/ui/html/track/track.html
@@ -1,6 +1,6 @@
 {{define "content"}}
 {{with .Track}}
-<div class="flex justify-center items-center min-h-screen bg-gray-100">
+<div class="flex justify-center items-center min-h-screen">
   <div class="bg-white border border-gray-300 rounded-lg shadow-lg w-[80vw]">
     <div class="text-center m-4">
       <h2 class="text-2xl font-bold">
@@ -22,5 +22,6 @@
       &nbsp;
     </div>
   </div>
-  {{end}}
-  {{end}}
+</div>
+{{end}}
+{{end}}
