--- a/ui/html/user/new.html
+++ b/ui/html/user/new.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<div class="flex justify-center items-center min-h-screen bg-gray-100">
+<div class="flex justify-center items-center min-h-screen">
   <!-- New User Form Container -->
   <div class="w-full max-w-md bg-white shadow-lg rounded-lg p-6">
     <h2 class="text-2xl font-semibold text-gray-800 text-center mb-6">Create New User</h2>
